# dfdx-mnist

./: .gitignore  Cargo.toml  README.md  flake.nix
datasets/: mnist.py
src/: main.rs  mnist.rs
